[build-system]
requires = ["meson", "meson-python"]
build-backend = "mesonpy"

[project]
# There are some restrictions on what makes a valid project name
# specification here:
# https://packaging.python.org/specifications/core-metadata/#name
name="ueberzug"  # Required
license = {file = "LICENSE"}
# Versions should comply with PEP 440:
# https://www.python.org/dev/peps/pep-0440/
#
# For a discussion on single-sourcing the version across setup.py and the
# project code, see
# https://packaging.python.org/en/latest/single_source_version.html
version = "18.3.1"
# This is a one-line description or tagline of what your project does. This
# corresponds to the "Summary" metadata field:
# https://packaging.python.org/specifications/core-metadata/#summary
description = "ueberzug is a command line util which allows to display images in combination with X11"
# This should be your name or the name of the organization which owns the
# project.
author = ""  # Optional
# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [  # Optional
  "Environment :: Console",
  "Environment :: X11 Applications",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: Utilities"
]
# This field adds keywords for your project which will appear on the
# project page. What does your project relate to?
#
# Note that this is a string of words separated by whitespace, not a list.
keywords=["image", "media", "terminal", "ui", "gui"]  # Optional
# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
#
# For an analysis of "install_requires" vs pip's requirements files see:
# https://packaging.python.org/en/latest/requirements.html
dependencies = [  # Optional
  "pillow",
  "docopt",
  "attrs>=18.2.0"
]
requires-python = ">=3.6"

[project.urls]
# List additional URLs that are relevant to your project as a dict.
#
# This field corresponds to the "Project-URL" metadata fields:
# https://packaging.python.org/specifications/core-metadata/#project-url-multiple-use
#
# Examples listed include a pattern for specifying where the package tracks
# issues, where the source is hosted, where to say thanks to the package
# maintainers, and where to support the project financially. The key is
# what's used to render the link text on PyPI.
# See also:
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#urls
"Homepage" = "https://github.com/ueber-devel/ueberzug"
"Source" = "https://github.com/ueber-devel/ueberzug"
"Bug Reports" = "https://github.com/ueber-devel/ueberzug/issues"

[project.scripts]
ueberzug = "ueberzug.__main__:main"
